--- a/admin/pages/index.html
+++ b/admin/pages/index.html
@@ -8,16 +8,11 @@
     <link rel="stylesheet" href="../assets/css/admin.css">
 </head>
 <body>
-          <div class="login-container">
           <h2>ERAH'S TRUE LUXE BEAUTY</h2>
           <form>
             <label> Full Name:</label>
             <input type="text" placeholder="afifa" id="name" required/>
             <br></br>
-
-            <label>Phone No:</label>
-            <input type="number" id="number" placeholder="5678765678" required/>
-            <br><br>
 
             <label>Email:</label>
             <input type="email" id="email" placeholder="afifa234@gmail.com" required/>
@@ -30,10 +25,9 @@
             <label>Password:</label>
             <input type="password" id="password" placeholder="Enter password" required/>
             <br><br>
-          </div>
-            <div class="login-botton">
+           <div 
             <button type="submit">login</button>
-             </div>
+
           </form>
     <script src="../assets/jss/auth.js"></script>
 </body>
